# CPP_Practice_Projects

./: .gitignore  README.md
HelloOpenGL/: README.md
HelloOpenGL/HelloOpenGL/: glad.c  main.cpp
cmake-tutorial/Directory/: CMakeLists.txt
cmake-tutorial/Directory/include/: Student.h
cmake-tutorial/Directory/src/: Student.cpp  mainapp.cpp
cmake-tutorial/SingleFile/: CMakeLists.txt  HelloWorld.cpp
